examples/datalog/10_edge_cases/103_empty_aggregation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_empty_agg
Knowledge graph 'test_empty_agg' created.
Switched to knowledge graph: test_empty_agg
> .kg use test_empty_agg
Switched to knowledge graph: test_empty_agg
> +empty_rel[].
Inserted 0 fact(s) into 'empty_rel'.
> sum_empty(<SUM:X>) :- empty_rel(X).
Script error: Parse error: Unknown aggregate function: 
